# OCRed

./: .all-contributorsrc  .coveragerc  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENCE.md  LICENSE  MANIFEST.in  README.md  index.html  mkdocs.yml  noxfile.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  vcpkg.json  versions.json
.github/: PULL_REQUEST_TEMPLATE.md  codecov.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: aiview_ocr.yml  cd.yml  ci.yml
aiview_ocr/: __init__.py  ocr.py  preprocessing.py
docs/: index.md  install.md  reference.md  requirements.txt
docs/_overrides/partial/: source.html
docs/stylesheets/: extra.css
examples/: OCR_examples.ipynb  Preprocessing_example (1).ipynb  Preprocessing_example.ipynb  Preprocessing_example.md
ocred/: __init__.py  ocr.py  preprocessing.py
src/: ocr.py
tests/: test_ocr.py  test_preprocessing.py
v0.1.0/: 404.html  index.html  objects.inv  requirements.txt
v0.1.0/contributing/: index.html
v0.1.0/install/: index.html
v0.1.0/search/: search_index.json
v0.1.1/: mathjax-config.js
v0.1.1/changelog/: index.html
v0.1.1/conduct/: index.html
v0.1.1/reference/: index.html
