[metadata]
name = OCRed
description = OCR wrapper library for direct users (not researchers)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Saransh-cpp/OCRed
author = Saransh Chopra
author_email = saransh0701@gmail.com
maintainer = Saransh Chopra
maintainer_email = saransh0701@gmail.com
license = MIT
license_file = LICENSE
platforms =
    Any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Customer Service
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
keywords =
    OCR
    Computer Vision
    Intended for direct users
project_urls =
    Bug Tracker = https://github.com/Saransh-cpp/OCRed/issues
    Discussions = https://github.com/Saransh-cpp/OCRed/discussions

[options]
packages = find:
install_requires =
    easyocr>=1.4.1
    gTTS>=2.2.3
    nltk>=3.5
    numpy>=1.19.4
    opencv-python==4.5.3.56
    pytesseract>=0.3.8
    scikit-image>=0.18.3
    scipy>=1.5.4
python_requires = >=3.7
include_package_data = True
package_dir =
    =ocred
zip_safe = False

[options.packages.find]
where = ocred
